--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -19,10 +19,11 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest
+        #python -m pip install --upgrade pip
+        #pip install pytest
+        pip3 install nexla-3.2.1-py3-none-any.whl
 
-    - name: Run tests
-      run: |
+    - #name: Run tests
+      #run: |
         cd src
         python -m pytest addition.py
