--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -25,5 +25,5 @@ jobs:
 
     - #name: Run tests
       #run: |
-        cd src
-        python -m pytest addition.py
+        #cd src
+        #python -m pytest addition.py
