--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -27,6 +27,4 @@ jobs:
         NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
         NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
       run: |
-        nexla env configure \
-        --environment "$NEXLA_ENVIRONMENT" \
-        --access-token "$NEXLA_ACCESS_TOKEN"
+        echo -e "$NEXLA_ENVIRONMENT\n$NEXLA_ACCESS_TOKEN" | nexla env configure
