--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -22,18 +22,11 @@ jobs:
       run: |
         pip3 install nexla-3.2.1-py3-none-any.whl
 
-    - name: Debug Environment Variables
-      run: |
-        echo "NEXLA_ENVIRONMENT: $NEXLA_ENVIRONMENT"
-        echo "NEXLA_ACCESS_TOKEN: $NEXLA_ACCESS_TOKEN"
-      env:
-        NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
-        NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
-
     - name: Configure Nexla Environment
       env:
         NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
         NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
       run: |
-        echo -e "$NEXLA_ENVIRONMENT\n$NEXLA_ACCESS_TOKEN" | nexla env configure
-        
+        nexla env configure \
+        --environment "$NEXLA_ENVIRONMENT" \
+        --access-token "$NEXLA_ACCESS_TOKEN"
