--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -27,6 +27,7 @@ jobs:
         NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
         NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
       run: |
-        nexla env configure \
-        --environment "$NEXLA_ENVIRONMENT" \
-        --access-token "$NEXLA_ACCESS_TOKEN"
+        cat <<EOF | nexla env configure
+        dataops.nexla.io
+        $NEXLA_ACCESS_TOKEN
+        EOF
