--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -1,4 +1,4 @@
-name: My First GitHub Actions
+name: Nexla GitHub Actions
 
 on: [push]
 
@@ -22,11 +22,16 @@ jobs:
       run: |
         pip3 install nexla-3.2.1-py3-none-any.whl
 
-    - name: Configure Nexla Environment
-      env:
-        NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
-        NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
+    - name: Debug Nexla Environment and Token
       run: |
-        cat <<EOF | nexla env configure
-        dataops.nexla.io
-        EOF
+        echo "Environment: $NEXLA_ENVIRONMENT"
+        echo "Access Token: $NEXLA_ACCESS_TOKEN"
+
+    - name: Configuring Nexla Environment
+      env:
+        NEXLA_ENVIRONMENT: dataops.nexla.io
+        NEXLA_ACCESS_TOKEN: eyJhbGciOiJIUzI1NiJ9.eyJ1aWQiOjE4ODQsIm9pZCI6MjA4LCJzdWIiOiJfTlhfQVBJXyIsImlhdCI6MTcyNzc2MDMyMywiZXhwIjoxNzI3ODQ2NzIzLCJlbnYiOiJwcm86NTcxZGYyNWRjYjIxYzhkMTc0YzU2NzY2ZGIzODhjNjEiLCJybmQiOiJoYjk0NXk5YyJ9.ot2H7FxcKeMTBGfNqlimOHw7AvmhrbJQGHnk7xI-wv0
+      run: |
+        nexla env configure \
+        --environment "$NEXLA_ENVIRONMENT" \
+        --token "$NEXLA_ACCESS_TOKEN"
