--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -32,4 +32,4 @@ jobs:
         NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
         NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
       run: |
-        nexla env configure --environment NEXLA_ENVIRONMENT
+        nexla env configure --environment $NEXLA_ENVIRONMENT
