--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -32,4 +32,7 @@ jobs:
         NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
         NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
       run: |
-        nexla env configure --environment "${{ secrets.NEXLA_ENVIRONMENT }}"
+        cat <<EOF | nexla env configure
+        $NEXLA_ENVIRONMENT
+        $NEXLA_ACCESS_TOKEN
+        EOF
