--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -32,7 +32,7 @@ jobs:
         NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
         NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
       run: |
-        cat <<EOF | nexla env configure
+        cat <<EOF | nexla env login
         $NEXLA_ENVIRONMENT
         $NEXLA_ACCESS_TOKEN
         EOF
