--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -1,52 +1,19 @@
-name: Nexla GitHub Actions
-
-on: [push]
+on: 
+  push:
+    branches:
+      - main
 
 jobs:
-  build:
+  check-directory:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python-version: [3.9]
-
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Print Current Directory
+        run: pwd
 
-    - name: Install dependencies
-      run: |
-        pip3 install nexla-3.2.1-py3-none-any.whl
+      - name: List Directory Contents
+        run: ls -la
 
-    - name: Install expect
-      run: sudo apt-get install -y expect
-
-    - name: Debug Nexla Environment, Token, and API URL
-      run: |
-        echo "Environment: ${{ secrets.NEXLA_ENVIRONMENT }}"
-        echo "Access Token: ${{ secrets.NEXLA_ACCESS_TOKEN }}"
-        echo "API URL: ${{ secrets.NEXLA_API_URL }}"
-
-    - name: Configuring Nexla Environment using expect
-      env:
-        NEXLA_ENVIRONMENT: ${{ secrets.NEXLA_ENVIRONMENT }}
-        NEXLA_ACCESS_TOKEN: ${{ secrets.NEXLA_ACCESS_TOKEN }}
-        NEXLA_API_URL: ${{ secrets.NEXLA_API_URL }}
-      run: |
-        expect <<EOF
-        spawn nexla env configure
-        expect "NEXLA Environment"
-        send "$NEXLA_ENVIRONMENT\r"
-        expect "ENTER ACCESS TOKEN"
-        send "$NEXLA_ACCESS_TOKEN\r"
-        expect "Enter API URL"
-        send "$NEXLA_API_URL\r"
-        expect eof
-        EOF
-    - name:  Export Development Flow Specification
-      run: |
-        nexla flows export -s 51098 -o /home/runner/work/Nexla_Poc/export_51098.json -a
