--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -49,4 +49,9 @@ jobs:
         EOF
     - name: Export Development Flow Specification
       run: |
-        nexla flows export -s 50593 -o /home/runner/work/Nexla_Poc/export_50593.json
+        nexla flows export -s 50593 -o /home/runner/work/Nexla_Poc/export_50593.json -a
+        
+    - name: Export Development Flow Specification
+      run: |
+        nexla flows import -i /home/runner/work/Nexla_Poc/export_50593.json -p /home/runner/work/Nexla_Poc/export_50593_properties.json
+
