--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -51,7 +51,7 @@ jobs:
       run: |
         nexla flows export -s 50593 -o /home/runner/work/Nexla_Poc/export_50593.json -a
         
-    - name: Export Development Flow Specification
+    - name: Create Production Flows
       run: |
         nexla flows import -i /home/runner/work/Nexla_Poc/export_50593.json -p /home/runner/work/Nexla_Poc/export_50593_properties.json
 
