--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -24,3 +24,5 @@ jobs:
     - name: All Directories
       run: |
         ls -la
+    - name: List files in work directory
+      run: ls -R /home/runner/work
