--- a/.github/workflows/Nexla_CICD.yml
+++ b/.github/workflows/Nexla_CICD.yml
@@ -18,10 +18,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Nexla Project list
-      run: |
-        nexla project list
-
-    - name: Import help
+    - name: Nexla Import help
       run: |
         nexla flow import --help
