--- a/.github/workflows/Nexla_CICD.yml
+++ b/.github/workflows/Nexla_CICD.yml
@@ -1,4 +1,4 @@
-name: Nexla GitHub Actions
+name: Nexla_Poc GitHub Actions
 
 on: [push]
 
@@ -49,7 +49,7 @@ jobs:
         EOF
     - name: Export Development Flow Specification
       run: |
-        nexla flows export -s 50593 -o /home/runner/work/Nexla_Poc/export_50593.json -a
+        nexla flows export -s 6581 -o /home/runner/work/Nexla_Poc/export_50593.json -a
 
     - name: Reading Exported json file
       run: |
