--- a/.github/workflows/Nexla_CICD.yml
+++ b/.github/workflows/Nexla_CICD.yml
@@ -1,4 +1,4 @@
-name: Nexla_Poc GitHub Actions
+name: Nexla GitHub Actions
 
 on: [push]
 
@@ -49,5 +49,18 @@ jobs:
         EOF
     - name: Export Development Flow Specification
       run: |
-        nexla flows
+        nexla flows export -s 50593 -o /home/runner/work/Nexla_Poc/export_50593.json -a
+
+    - name: Reading Exported json file
+      run: |
+        cat /home/runner/work/Nexla_Poc/export_50593.json
+        
+    - name: Reading exported properties file
+      run: |
+        cat /home/runner/work/Nexla_Poc/export_50593_properties.json
+        
+        
+    #- name: Create Production Flows
+      #run: |
+        #nexla flows import -i /home/runner/work/Nexla_Poc/export_50593.json -p /home/runner/work/Nexla_Poc/export_50593_properties.json
 
