--- a/.github/workflows/Nexla_CICD.yml
+++ b/.github/workflows/Nexla_CICD.yml
@@ -60,7 +60,7 @@ jobs:
         cat /home/runner/work/Nexla_Poc/export_50593_properties.json
         
         
-    #- name: Create Production Flows
-      #run: |
-        #nexla flows import -i /home/runner/work/Nexla_Poc/export_50593.json -p /home/runner/work/Nexla_Poc/export_50593_properties.json
+    - name: Create Production Flows
+      run: |
+        nexla flows import -i /home/runner/work/Nexla_Poc/export_50593.json -p /home/runner/work/Nexla_Poc/export_50593_properties.json /Prod
 
