--- a/.github/workflows/Nexla_CICD.yml
+++ b/.github/workflows/Nexla_CICD.yml
@@ -49,7 +49,7 @@ jobs:
         EOF
     - name: Export Development Flow Specification
       run: |
-        nexla flows export -s 50593 -o /home/runner/work/Nexla_Poc/Prod/export_50593.json -a
+        nexla flows export -s 50942 -o /home/runner/work/Nexla_Poc/Prod/export_50942.json -a
 
     - name: Reading Exported json file
       run: |
@@ -62,5 +62,5 @@ jobs:
         
     - name: Create Production Flows
       run: |
-        nexla flows import -i /home/runner/work/Nexla_Poc/Prod/export_50593.json -p /home/runner/work/Nexla_Poc/Prod/export_50593_properties.json Prod
+        nexla flows import -i /home/runner/work/Nexla_Poc/Prod/export_50942.json -p /home/runner/work/Nexla_Poc/Prod/export_50942_properties.json
 
